kustomize/base/stg-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stg-nginx-ingress
  namespace: front-end
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:381492217459:certificate/55b9afc9-d4b8-4341-b652-1d09ee50d85d
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443},{"HTTP":80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
spec:
  rules:
  - host: demo.ticket-java.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: login-nginx-svc
            port:
              number: 80
      - path: /concert
        pathType: Prefix
        backend:
          service:
            name: concert-nginx-svc
            port:
              number: 80
